bad/int_negation_of_string.example_compiler_output
ERROR
[1mbad/int_negation_of_string.lat:3:2: [1;31merror: [0;1mcannot negate value of non-integer type `string`[m
	-"abc";
	[1;32m^[m
